[package]
name = "rustorm"
version = "0.19.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "A complete rewrite of rustorm"
repository = "https://github.com/ivanceras/rustorm"
documentation = "https://docs.rs/rustorm"
readme = "README.md"
keywords = ["orm", "postgresql", "sqlite"]
edition = "2018"

[package.metadata.docs.rs]
features = ["with-postgres"]

[dependencies]
bigdecimal = "0.0.14"
byteorder = "1.0"
cfg-if = "0.1.2"
chrono = "0.4.0"
geo = "0.4"
log = "0.4"
meval = "0.1.0"
num-bigint = "0.2"
num-integer = "0.1"
num-traits = "0.2"
postgres-shared = { version = "0.4.0", optional = true }
r2d2 = "0.8.9"
r2d2_mysql = { version = "21.0.0", optional = true }
r2d2_postgres = { version = "0.14.0", optional = true }
r2d2_sqlite = { version = "0.19.0", optional = true }
rusqlite = { version = "0.26.3", optional = true }
rustorm_dao = { path = "crates/dao", version = "0.18.0" }
rustorm_codegen = { path = "crates/codegen", version = "0.18.0" }
serde = { version = "1.0.15", features = ["derive"] }
serde_json = "1.0.3"
thiserror = "1.0.3"
time = "0.1.14"
url = "1.5"
uuid = "0.5.1"

[dependencies.postgres]
version = "0.15.1"
optional = true
features = [
    "with-bit-vec",
    "with-chrono",
    "with-geo",
    "with-serde_json",
    "with-time",
    "with-uuid",
]

[badges]
travis-ci = { repository = "ivanceras/rustorm" }

[features]
db-auth = [] # Use the database as authentication server for the user
with-mysql = ["r2d2_mysql"]
with-postgres = ["postgres", "r2d2_postgres", "postgres-shared"]
with-sqlite = ["rusqlite", "r2d2_sqlite"]
