[package]
name = "rustorm_codegen"
version = "0.18.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "code gen provides macro for generating code on data access objects on table metadata"
repository = "https://github.com/ivanceras/rustorm"
documentation = "https://docs.rs/rustorm"
keywords = ["orm", "postgresql", "sqlite"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
rustorm_dao = { path = "../dao", version = "0.18.0" }
syn = "1.0.84"

[lib]
proc-macro = true
