[package]
name = "rustorm_dao"
version = "0.18.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Dao provides a flexible way to access data from the database"
repository = "https://github.com/ivanceras/rustorm"
documentation = "https://docs.rs/rustorm"
keywords = ["orm", "postgresql", "sqlite"]
edition = "2018"

[dependencies]
base64 = "0.9"
bigdecimal = { version = "0.0.14", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
geo = "0.4"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
thiserror = "1.0.3"
time = "0.1.14"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
