[package]
name = "clia-rustorm-dao"
version = "0.18.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>", "clia" ]
license = "MIT"
description = "Dao provides a flexible way to access data from the database"
repository = "https://github.com/clia/rustorm"
documentation = "https://docs.rs/clia-rustorm-dao"
keywords = ["orm", "postgresql", "sqlite"]
edition = "2018"

[dependencies]
base64 = "0.13"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
geo-types = { version = "0.7.2", features = ["serde"] }
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
thiserror = "1.0.3"
time = "0.3.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
